--- a/audio_ai_all/audio_main/src/main/resources/oracle.properties
+++ b/audio_ai_all/audio_main/src/main/resources/oracle.properties
@@ -1,4 +1,10 @@
-mongo.database.host=db
-mongo.database.port=37017
-mongo.database.name=quaestio
-mongeez.config=data/migration/mongeez.xml
+#DB properties:  
+db.driver=oracle.jdbc.driver.OracleDriver  
+db.url=jdbc:oracle:thin:@127.0.0.1:1521:xe  
+db.username=soundtracker  
+db.password=soundtracker  
+  
+#Hibernate Configuration:  
+hibernate.dialect=org.hibernate.dialect.Oracle10gDialect 
+hibernate.show_sql=true  
+entitymanager.packages.to.scan=edu.sofia.fmi.audiorec.database.model
